Fix rich text editor's overflow bug

--- a/src/components/editors/RichTextEditor.scss
+++ b/src/components/editors/RichTextEditor.scss
@@ -1,5 +1,7 @@
 :global {
 .RichTextEditor {
+  overflow: auto;
+
   // GENERIC STYLES
 
   input,
